# sf2000_hcrtos

./: .gitignore  .gitlab-ci.yml  .gitmodules  Kconfig  Makefile  README.md  Readme.md  bisrv.asd  buildSf.sh  buildSfClean.sh  ci.sh  crc  crc.c  deleteSubmodules.sh  hrepo  install-dependencies.sh  install-toolchain.sh  submodules.txt  t211.sh
components/: Kconfig
components/hc-examples/source/: .gitignore  Makefile  console.c  console.h  dis_test.c  dis_test.h  es_decoder.c  es_decoder.h  fb_dither_test.c  fb_test.c  fdkaac_test.c  ffplayer_examples.c  ge_draw_subtitle.c  ge_draw_subtitle.h  glist.c  h264_es_player.c  hdmi_rx_test.c  i2s_record_test.c  meson.build  meson_options.txt  showlogo.c  showlogo.h  tv_decoder_test.c  vin_dvp_test.c  vin_dvp_test.h  wav.c  wav.h
components/hc-examples/source/dsc/: Makefile  aes_test.h  des_test.h  dsc_file.c  dsc_test.c  sha_test.h  test_sha.c
components/hc-examples/source/ge/: CMakeLists.txt  hcge_blit_test.c  hcge_cust_api_test.c  hcge_fill_rect_test.c  hcge_rotate_test.c
components/hc-examples/source/ge/customer_api/: mi_common.h  mi_gfx.c  mi_gfx_datatype.h
components/hc-examples/source/hdmi_switch/: hdmi_switch.c
components/hc-examples/source/hdmi_wireless_display.raw/: Makefile  Makefile1  S41hdmi_wired_source  S42display_sink-5g  common.h  decoder.c  display_sink.c  display_source.c  hostapd_sink_2G.conf  hostapd_sink_5G.conf  jenc_rdo.c  jenc_rdo.h  p2p.conf  queue.c  queue.h  raw_proto.c  raw_proto.h  raw_recv.c  raw_send.c  tables.h
components/hc-examples/source/hdmi_wireless_display.tcp/: Makefile  S41display_source-2g  S41display_source-5g  S41hdmi_wired_sink  S42display_sink-2g  common.h  decoder.h  display_sink.c  display_source.c  hdmi_rx_quality.h  jenc_rdo.c  jenc_rdo.h  queue.c  queue.h  tables-new.h  tables.h  wpa_supplicant-display-5g.conf
components/hc-examples/source/pq_tool/: hc_pq_reg.c  hc_pq_reg.h  main.c
components/hc-examples/source/usb_otg_daemon/: main.c
components/hc-examples/source/v4l2grab/: config.h  v4l2grab.c
components/hc-examples/source/video-extractor/: CMakeLists.txt  README  extractor.c
components/hc-examples/source/wifi_test/: wifi_test.c
components/hccast/source/: .gitignore  CMakeLists.txt
components/hccast/source/aircast/: hccast_air_api.c  hccast_air_api.h  hccast_air_avplayer.c  hccast_air_avplayer.h  hccast_air_decoder.c  hccast_air_decoder.h  hccast_air_service.c
components/hccast/source/app/: hccast_simple_um.c  hccast_simple_wireless.c  hccast_simple_zlink.c
components/hccast/source/common/: castapp_log.h  hccast_av.c  hccast_av.h  hccast_dsc.c  hccast_dsc.h  hccast_log.c  hccast_log.h  hccast_media.c  hccast_net.c  hccast_scene.c
components/hccast/source/dlna/: hccast_dlna_player.c  hccast_dlna_player.h  hccast_dlna_service.c
components/hccast/source/httpd/: hccast_httpd_service.c  hccast_web_interface.c  hccast_web_interface.h  hccast_web_package.h  hccast_web_page.h  hccast_web_upgrade_download.c  hccast_web_upgrade_download.h
components/hccast/source/httpd/web/: README.md  config_lang.json  config_menu.json  config_setting.json  guide.html  index.html  setting.html  wlan.html  wlan_add.html  wlan_info.html
components/hccast/source/httpd/web-p1/: README.md  config_lang.json  config_setting.json  guide.html  index.html  wlan.html  wlan_add.html
components/hccast/source/httpd/web_tool/: hccast_web_page_generate.c  web_generate
components/hccast/source/inc/: hccast_air.h  hccast_com.h  hccast_dhcpd.h  hccast_dlna.h  hccast_httpd.h  hccast_iptv.h  hccast_media.h  hccast_mira.h  hccast_net.h  hccast_scene.h  hccast_um.h  hccast_wifi_mgr.h
components/hccast/source/iptv/: hccast_iptv.c
components/hccast/source/miracast/: hccast_mira_avplayer.c  hccast_mira_avplayer.h  hccast_mira_service.c
components/hccast/source/udhcp/: arpping.c  arpping.h  clientpacket.c  clientpacket.h  debug.h  dhcpc.c  dhcpc.h  dhcpc_hcrtos.c  dhcpd.c  dhcpd.h  dhcpd_hcrtos.c  dhcpd_service.h  dumpleases.c  files.c  files.h  frontend.c  leases.c  leases.h  libbb_udhcp.h  options.c  options.h  packet.c  packet.h  pidfile.c  script.c  script.h  serverpacket.c  serverpacket.h  socket.c
components/hccast/source/udhcp/samples/: simple.script
components/hccast/source/um/: hccast_aum_service.c  hccast_ium_service.c  hccast_um_api.c  hccast_um_api.h  hccast_um_avplayer.c  hccast_um_avplayer.h
components/hccast/source/wifi_mgr/: hccast_p2p_ctrl.c  hccast_p2p_ctrl.h  hccast_p2p_ctrl_wext.c  hccast_wifi_ctrl.c  hccast_wifi_ctrl.h  hccast_wifi_mgr.c
configs/: T211_a210_bl_defconfig  T211_a210_defconfig  hichip_hc15xx_b2bupdater_defconfig  hichip_hc15xx_cb_b200_v21_xbmp5_c1_bl_defconfig  hichip_hc15xx_cb_b200_v21_xbmp5_c1_defconfig  hichip_hc15xx_cb_b200_v21_xbmp5_edp_c1_bl_defconfig  hichip_hc15xx_cb_b200_v21_xbmp5_edp_c1_defconfig  hichip_hc15xx_cb_b200_v21_xbmp5_nowifi_c1_bl_defconfig  hichip_hc15xx_cb_b200_v21_xbmp5_nowifi_c1_defconfig  hichip_hc15xx_db_a110_v11_hcdemo_bl_defconfig  hichip_hc15xx_db_a110_v11_hcdemo_defconfig  hichip_hc15xx_db_a111_v11_hcusbcast_bl_defconfig  hichip_hc15xx_db_a111_v11_hcusbcast_defconfig  hichip_hc15xx_db_a210_hcscreen_bl_defconfig  hichip_hc15xx_db_a210_hcscreen_defconfig  hichip_hc15xx_db_a210_hcusbcast_bl_defconfig  hichip_hc15xx_db_a210_hcusbcast_defconfig  hichip_hc15xx_db_a210_user_data_sample_defconfig  hichip_hc15xx_db_a210_v12_projector_bl_defconfig  hichip_hc15xx_db_a210_v12_projector_defconfig  hichip_hc15xx_db_a210_xbmp5_bl_defconfig  hichip_hc15xx_db_a210_xbmp5_defconfig  hichip_hc15xx_db_b100_v12_hcdemo_bl_defconfig  hichip_hc15xx_db_b100_v12_hcdemo_defconfig  hichip_hc15xx_db_b100_v12_hcscreen_bl_defconfig  hichip_hc15xx_db_b100_v12_hcscreen_defconfig  hichip_hc15xx_db_b100_v12_hcusbcast_bl_defconfig  hichip_hc15xx_db_b100_v12_hcusbcast_defconfig  hichip_hc15xx_db_b100_v12_media_cast_lite_bl_defconfig  hichip_hc15xx_db_b100_v12_media_cast_lite_defconfig  hichip_hc15xx_db_b200_v10_hcdemo_bl_defconfig  hichip_hc15xx_db_b200_v10_hcdemo_defconfig  hichip_hc15xx_db_b200_v22_media_cast_bl_defconfig  (+96 more)
tools/: lcd.py
(+1993 files in other folders)
